correcton du carousel avec compteur d'image visible en mobile

--- a/src/styles/_logementCarousel.scss
+++ b/src/styles/_logementCarousel.scss
@@ -1,5 +1,5 @@
 .carouselContainer {
-    height: 450px;
+    height: 415px;
     width: 90%;
     margin: 0 auto 5px;
     display: flex;
@@ -44,9 +44,10 @@
 .carouselCounter {
     color: white;
     display: flex;
+
     align-items: center;
     justify-content: center;
-    margin-top: -40px;
+    margin-top: -44px;
 }
 
 
@@ -61,12 +62,5 @@
 
     .arrowRight {
         height: 8%;
-    }
-}
-
-@media only screen and (max-width: 768px) {
-    .carouselCounter {
-        display: none;
-
     }
 }
